tests/errors/module_no_leak/module_no_leak.c
#error module_no_leak.module_no_leak:8:3 The name 'f1' here should denote to some value; but not found.
